--- a/Common/KeyValueStorage/KeyValueStorage.csproj
+++ b/Common/KeyValueStorage/KeyValueStorage.csproj
@@ -67,7 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AzureTableKeyValueEntity.cs" />
-    <Compile Include="AzureTableKeyValueStore.cs" />
+    <Compile Include="KeyValueStore.cs" />
     <Compile Include="DuplicateKeyException.cs" />
     <Compile Include="EntityNotFoundException.cs" />
     <Compile Include="ETagMismatchException.cs" />
