--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -70,16 +70,15 @@
   <ItemGroup>
     <Compile Include="Clock.cs" />
     <Compile Include="CommonErrorCodes.cs" />
-    <Compile Include="Entities\Account.cs" />
-    <Compile Include="Entities\Identity.cs" />
+    <Compile Include="Entities\AccountEntity.cs" />
     <Compile Include="Extensions\StringExtension.cs" />
-    <Compile Include="V1\Operations\BaseOperation.cs" />
-    <Compile Include="V1\Operations\CreateAccountOperation.cs" />
-    <Compile Include="V1\Operations\CheckpointData.cs" />
-    <Compile Include="V1\Operations\OperationContext.cs" />
-    <Compile Include="V1\Operations\OperationResponse.cs" />
+    <Compile Include="V1\BaseOperation.cs" />
+    <Compile Include="V1\CheckpointData.cs" />
+    <Compile Include="V1\OperationContext.cs" />
+    <Compile Include="V1\OperationResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EnvironmentSettings.cs" />
+    <Compile Include="V1\ProcessMessageOperation.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
