--- a/Test/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/Test/SabbathText.Tests/SabbathText.Tests.csproj
@@ -55,7 +55,6 @@
     </Otherwise>
   </Choose>
   <ItemGroup>
-    <Compile Include="V1\Operations\CreateAccountOperationTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestEnvironmentSettings.cs" />
     <Compile Include="TestGlobals.cs" />
@@ -79,7 +78,9 @@
       <Name>SabbathText</Name>
     </ProjectReference>
   </ItemGroup>
-  <ItemGroup />
+  <ItemGroup>
+    <Folder Include="V1\Operations\" />
+  </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
