--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -80,6 +80,7 @@
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="V1\BaseOperation.cs" />
     <Compile Include="V1\CheckpointData.cs" />
+    <Compile Include="V1\GreetUserOperation.cs" />
     <Compile Include="V1\Message.cs" />
     <Compile Include="V1\MessageClient.cs" />
     <Compile Include="V1\OperationContext.cs" />
