--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -81,7 +81,10 @@
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="V1\BaseOperation.cs" />
     <Compile Include="V1\CheckpointData.cs" />
+    <Compile Include="V1\ConversationProcessor.cs" />
+    <Compile Include="V1\GreetUserCheckpointData.cs" />
     <Compile Include="V1\GreetUserOperation.cs" />
+    <Compile Include="V1\GreetUserState.cs" />
     <Compile Include="V1\Message.cs" />
     <Compile Include="V1\MessageClient.cs" />
     <Compile Include="Entities\MessageDirection.cs" />
@@ -92,7 +95,9 @@
     <Compile Include="V1\OperationResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EnvironmentSettings.cs" />
+    <Compile Include="V1\ProcessMessageCheckpointData.cs" />
     <Compile Include="V1\ProcessMessageOperation.cs" />
+    <Compile Include="V1\ProcessMessageState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
