--- a/SabbathText.Location/SabbathText.Location.csproj
+++ b/SabbathText.Location/SabbathText.Location.csproj
@@ -31,6 +31,9 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="CsvHelper">
+      <HintPath>..\packages\CsvHelper.2.13.0.0\lib\net40-client\CsvHelper.dll</HintPath>
+    </Reference>
     <Reference Include="NodaTime">
       <HintPath>..\packages\NodaTime.1.3.1\lib\net35-Client\NodaTime.dll</HintPath>
     </Reference>
@@ -43,6 +46,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="V1\LocationInfo.cs" />
+    <Compile Include="V1\LocationType.cs" />
+    <Compile Include="V1\PositionSensitiveStreamReader.cs" />
+    <Compile Include="V1\RawData.cs" />
     <Compile Include="V1\SunCalculator.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
