--- a/SabbathText.Compensation/SabbathText.Compensation.csproj
+++ b/SabbathText.Compensation/SabbathText.Compensation.csproj
@@ -52,6 +52,7 @@
     <Compile Include="V1\CompensationClient.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="app.config" />
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
