--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -81,7 +81,7 @@
     <Compile Include="Extensions\StringExtension.cs" />
     <Compile Include="V1\BaseOperation.cs" />
     <Compile Include="V1\CheckpointData.cs" />
-    <Compile Include="V1\ConversationProcessor.cs" />
+    <Compile Include="V1\MessageProcessor.cs" />
     <Compile Include="V1\GreetUserCheckpointData.cs" />
     <Compile Include="V1\GreetUserOperation.cs" />
     <Compile Include="V1\GreetUserState.cs" />
@@ -95,9 +95,9 @@
     <Compile Include="V1\OperationResponse.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="EnvironmentSettings.cs" />
-    <Compile Include="V1\ProcessMessageCheckpointData.cs" />
-    <Compile Include="V1\ProcessMessageOperation.cs" />
-    <Compile Include="V1\ProcessMessageState.cs" />
+    <Compile Include="V1\SubscribeMessageOperation.cs" />
+    <Compile Include="V1\SubscribeMessageOperationCheckpointData.cs" />
+    <Compile Include="V1\SubscribeMessageOperationState.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\common\KeyValueStorage\KeyValueStorage.csproj">
@@ -115,6 +115,10 @@
     <ProjectReference Include="..\SabbathText.Compensation\SabbathText.Compensation.csproj">
       <Project>{89227b2c-ebc6-4235-a5a8-e28ee4e034e9}</Project>
       <Name>SabbathText.Compensation</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\SabbathText.Location\SabbathText.Location.csproj">
+      <Project>{8434442e-36ae-4b1e-b37f-4cc89b4839dd}</Project>
+      <Name>SabbathText.Location</Name>
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
