--- a/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/SabbathText.Tests/SabbathText.Tests.csproj
@@ -82,6 +82,7 @@
     <Compile Include="TestEnvironmentSettings.cs" />
     <Compile Include="TestGlobals.cs" />
     <Compile Include="TestHelper.cs" />
+    <Compile Include="SecretSettingTests.cs" />
     <Compile Include="V1\InMemoryMessageClient.cs" />
     <Compile Include="V1\ProcessMessageOperationTests.cs" />
     <Compile Include="V1\ZipMessageTests.cs" />
