--- a/SabbathText.Tests/SabbathText.Tests.csproj
+++ b/SabbathText.Tests/SabbathText.Tests.csproj
@@ -83,6 +83,7 @@
     <Compile Include="TestGlobals.cs" />
     <Compile Include="TestHelper.cs" />
     <Compile Include="SecretSettingTests.cs" />
+    <Compile Include="SecretProviderTests.cs" />
     <Compile Include="V1\InMemoryMessageClient.cs" />
     <Compile Include="V1\ProcessMessageOperationTests.cs" />
     <Compile Include="V1\ZipMessageTests.cs" />
