--- a/SabbathText/SabbathText.csproj
+++ b/SabbathText/SabbathText.csproj
@@ -154,6 +154,7 @@
     <Compile Include="EnvironmentSettings.cs" />
     <Compile Include="V1\SubscribeMessageOperation.cs" />
     <Compile Include="V1\SubscribeMessageOperationCheckpointData.cs" />
+    <Compile Include="V1\UnknownMessageOperation.cs" />
     <Compile Include="V1\UpdateZipCodeOperation.cs" />
     <Compile Include="V1\UpdateZipCodeOperationCheckpointData.cs" />
     <Compile Include="V1\RespondingMessageOperationState.cs" />
